--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="text-center mg-clear hero-header-text text-blue-gradient">
-					ERAS HUKUK / DANIŞMANLIK.<br>
+					ERAS.<br>
 				</h1>
 				<h3 class="mg-md float-none text-center hero-subheader tc-black">
 					ERAS HUKUK WEBSİTESİ YAKINDA SİZLERLE.
