--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="cloudflare, pages, template, edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
-	<title>ErasLAW Welcome Screen</title>
+	<title>Eras Hukuk</title>
     <link rel="shortcut icon" type="image/png" href="favicon.png">
 	<!-- Metadata END -->
     
