--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
 					Eras Hukuk / Danışmanlık Instagram Sayfası
 				</h1>
 				<div class="text-center">
-					<a href="https://www.cloudflare.com/network/" class="btn btn-lg btn-rd btn-portland-orange" rel="nofollow noopener noreferrer" target="_blank">@eraslaw</a>
+					<a href="https://www.instagram.com/erashukukdanismanlik/" class="btn btn-lg btn-rd btn-portland-orange" rel="nofollow noopener noreferrer" target="_blank">@erashukukdanismanlik</a>
 				</div>
 			</div>
 			<div class="offset-md-2 col-md-8 col-lg-8 offset-lg-2">
 				<div class="mx-auto d-block blocsapp-device blocsapp-device-mb mb-space-grey">
-					<img src="img/lazyload-ph.png" data-src="img/cloudflare-network.png" class="img-fluid lazyload" alt="cloudflare network" />
+					<img src="img/lazyload-ph.png" data-src="img/eraslaww.png" class="img-fluid lazyload" alt="cloudflare network" />
 				</div>
 			</div>
 		</div>
