--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					Eras Hukuk / Danışmanlık Instagram Sayfası
 				</h1>
 				<div class="text-center">
-					<a href="https://www.instagram.com/erashukukdanismanlik/" class="btn btn-lg btn-rd btn-portland-orange" rel="nofollow noopener noreferrer" target="_blank">@erashukukdanismanlik</a>
+					<a href="https://www.instagram.com/erashukukdanismanlik/" class="btn btn-lg btn-rd btn-portland-black" rel="nofollow noopener noreferrer" target="_blank">@erashukukdanismanlik</a>
 				</div>
 			</div>
 			<div class="offset-md-2 col-md-8 col-lg-8 offset-lg-2">
