--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
 					Eras Hukuk / Danışmanlık Instagram Sayfası
 				</h1>
 				<div class="text-center">
-					<a href="https://www.instagram.com/erashukukdanismanlik/" class="btn btn-lg btn-rd btn-portland-orange" rel="nofollow noopener noreferrer" target="_blank">@erashukukdanismanlik</a>
-				</div>
+					<a href="https://instagram.com/erashukukdanismanlik" 
+   style="background-color: black; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; display: inline-block;">
+  @erashukukdanismanlik
+</a>
 			</div>
 			<div class="offset-md-2 col-md-8 col-lg-8 offset-lg-2">
 				<div class="mx-auto d-block blocsapp-device blocsapp-device-mb mb-space-grey">
