--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
 					Eras Hukuk / Danışmanlık Instagram Sayfası
 				</h1>
 				<div class="text-center">
-					<a href="https://instagram.com/erashukukdanismanlik" 
-   style="background-color: black; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; display: inline-block;">
+					<a class="btn btn-orange" 
+   href="https://instagram.com/erashukukdanismanlik" 
+   style="background-color: black; color: white;">
   @erashukukdanismanlik
 </a>
 			</div>
