--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
    target="_blank" 
    rel="noopener noreferrer" 
    style="
-     background-color: #444;         /* hafif gri-siyah arası */
+     background-color: #000;         /* siyah */
      color: white; 
      padding: 10px 25px; 
      border-radius: 999px;           /* full oval */
