--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   // Hover efekti için inline JS çözümü (sadece HTML'le yetinmek isteyenler için)
   const button = document.querySelector('a[href*="instagram.com/erashukukdanismanlik"]');
   button.addEventListener('mouseover', () => button.style.backgroundColor = '#666'); // açık gri
-  button.addEventListener('mouseout', () => button.style.backgroundColor = '#444');  // orijinal koyu gri
+  button.addEventListener('mouseout', () => button.style.backgroundColor = '#000');  // orijinal siyah
 </script>
 			</div>
 			<div class="offset-md-2 col-md-8 col-lg-8 offset-lg-2">
