--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 	<!-- Metadata -->
     <meta charset="utf-8">
-    <meta name="keywords" content="cloudflare, pages, template, edge">
+    <meta name="keywords" content="eras hukuk, hukuk bürosu, avukat, danışmanlık, istanbul avukat, yasal danışmanlık">
+	<meta name="description" content="Eras Hukuk ve Danışmanlık: Güvenilir, profesyonel ve etkin hukuk hizmetleri. Yakında yayında.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
-	<title>Eras Hukuk</title>
+	<title>Eras Hukuk ve Danışmanlık</title>
     <link rel="shortcut icon" type="image/png" href="eraslaw.png">
 	<!-- Metadata END -->
     
