--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta name="robots" content="index, follow">
 	<title>Eras Hukuk ve Danışmanlık</title>
     <link rel="shortcut icon" type="image/png" href="eraslaw.png">
+	<link rel="icon" href="/img/eraslaw.png" type="image/png">
 	<!-- Metadata END -->
     
 	<!-- Stylesheets -->
