--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+	<meta name="keywords" content="Eras Hukuk, Eras Law, Eras Danışmanlık, Avukat Ankara, Hukuk Bürosu, Ceza Hukuku, Aile Hukuku, Ticaret Hukuku, Eras Avukatlık Bürosu">
+
 	<!-- Metadata -->
     <meta charset="utf-8">
     <meta name="keywords" content="eras hukuk, hukuk bürosu, avukat, danışmanlık, istanbul avukat, yasal danışmanlık">
