--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta name="keywords" content="Eras Hukuk, Eras Law, Eras Danışmanlık, Avukat Ankara, Hukuk Bürosu, Ceza Hukuku, Aile Hukuku, Ticaret Hukuku, Eras Avukatlık Bürosu">
-
 	<!-- Metadata -->
     <meta charset="utf-8">
-    <meta name="keywords" content="eras hukuk, hukuk bürosu, avukat, danışmanlık, istanbul avukat, yasal danışmanlık">
+	<meta name="keywords" content="Eras Hukuk, Ankara Avukat, Eras Danışmanlık, Ceza Hukuku, Aile Hukuku, Ticaret Hukuku, Eras Law, Eras Law Firm, Hukuk Bürosu">
+    <meta name="keywords" content="Eras Hukuk, Eras Law, Eras Danışmanlık, Avukat Ankara, Hukuk Bürosu, Ceza Hukuku, Aile Hukuku, Ticaret Hukuku, Eras Avukatlık Bürosu">
 	<meta name="description" content="Eras Hukuk ve Danışmanlık: Güvenilir, profesyonel ve etkin hukuk hizmetleri. Yakında yayında.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
