--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+	<meta name="keywords" content="eras law, eras hukuk, Eras Hukuk, Eras Law, Eras Danışmanlık, Avukat Ankara, Hukuk Bürosu, Ceza Hukuku, Aile Hukuku, Ticaret Hukuku, Eras Avukatlık Bürosu">
 	<!-- Metadata -->
     <meta charset="utf-8">
     <meta name="keywords" content="eras law, eras hukuk, Eras Hukuk, Eras Law, Eras Danışmanlık, Avukat Ankara, Hukuk Bürosu, Ceza Hukuku, Aile Hukuku, Ticaret Hukuku, Eras Avukatlık Bürosu">
