--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta name="keywords" content="eras law, eras hukuk, Eras Hukuk, Eras Law, Eras Danışmanlık, Avukat Ankara, Hukuk Bürosu, Ceza Hukuku, Aile Hukuku, Ticaret Hukuku, Eras Avukatlık Bürosu">
+    <meta name="keywords" content="eras law, eras hukuk, Eras Hukuk, Eras Law, Eras Danışmanlık, Avukat Ankara, Hukuk Bürosu, Ceza Hukuku, Aile Hukuku, Ticaret Hukuku, Eras Avukatlık Bürosu">
 	<!-- Metadata -->
     <meta charset="utf-8">
     <meta name="keywords" content="eras law, eras hukuk, Eras Hukuk, Eras Law, Eras Danışmanlık, Avukat Ankara, Hukuk Bürosu, Ceza Hukuku, Aile Hukuku, Ticaret Hukuku, Eras Avukatlık Bürosu">
-	<meta name="description" content="Eras Hukuk ve Danışmanlık: Güvenilir, profesyonel ve etkin hukuk hizmetleri. Yakında yayında.">
+    <meta name="description" content="Eras Hukuk ve Danışmanlık: Güvenilir, profesyonel ve etkin hukuk hizmetleri. Yakında sizlerle.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
 	<title>Eras Hukuk ve Danışmanlık</title>
     
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="eraslaw.png">
-	<link rel="icon" href="eraslaw.png" type="image/png">
+	<link rel="icon" type="image/png href="eraslaw.png"">
 
 	<!-- Metadata END -->
     
