--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				</div>
 				<div class="offset-md-2 col-md-8 col-lg-8 offset-lg-2">
 					<div class="mx-auto d-block blocsapp-device blocsapp-device-mb mb-space-grey">
-						<img src="img/lazyload-ph.png" data-src="img/eraslaww.png" class="img-fluid lazyload" alt="cloudflare network" />
+						<img src="img/lazyload-ph.png" data-src="img/eraslaww.png" class="img-fluid lazyload" alt="Eras Hukuk ve Danışmanlık." />
 					</div>
 				</div>
 			</div>
